fixed symbol alignment

--- a/src/components/faq-box/index.css
+++ b/src/components/faq-box/index.css
@@ -14,6 +14,12 @@
     margin: 50px 25px;
 }
 
+#question-mark{
+    position: relative;
+    top: 5px;
+    margin-left: 7px;
+}
+
 #faq-title{
     font-style: normal;
     font-weight: 500;
